Fix for links in headers displaying at the wrong size

--- a/assets/css/customisations.scss
+++ b/assets/css/customisations.scss
@@ -42,6 +42,11 @@ a {
     font-weight: 500 !important;
 }
 
+h3 a {
+    font-size: 1.4rem !important;
+    font-weight: 500 !important;
+}
+
 // .main-content {
 //     //padding-top: 22px;
 //     //padding-bottom: 27px;
